# geospatial-web-app

./: LICENSE  README.md  app.py
frontend/: pyproject.toml
geospatial-cloud-server-image/src/: main.py
qgis-server/: make-request.py  qgis-ml-server-flask.py  qgis-ml-server.py  run_qgis_script.bat
streamlit-app/: data-visualiser.py  main.py
streamlit-app/pages/: qgis-ml-request.py
